--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "body-parser": "^1.18.2",
     "express": "^4.16.3",
     "express-joi-validation": "^0.2.1",
+    "express-jwt": "^5.3.1",
+    "express-unless": "^0.5.0",
     "joi": "^13.2.0",
+    "jsonwebtoken": "^8.2.1",
     "mysql": "^2.15.0",
     "mysql2": "^1.5.3",
     "sequelize": "^4.37.6",
